--- a/debian/control
+++ b/debian/control
@@ -4,12 +4,11 @@ Priority:extra
 Maintainer: destr <destrd@gmail.com>
 Build-Depends: debhelper (>= 9),
                python3,
-               python3-venv,
-               python3-pip,
-               dh-virtualenv (>= 0.8),
+               dh-python,
                dh-exec
 Standards-Version:3.9.2
 
 Package: issmoexproxy
 Architecture: any
+Depends: ${python3:Depends}
 Description: ISS MOEX proxy
