--- a/debian/issmoexproxy.service
+++ b/debian/issmoexproxy.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=nobody
 Group=nogroup
-ExecStart=/opt/issmoexproxy/bin/python3 /opt/issmoexproxy/bin/issmoexproxy
+ExecStart=/usr/bin/issmoexproxy
 
 RestartSec=5
 Restart=always
