--- a/debian/rules
+++ b/debian/rules
@@ -1,15 +1,20 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-export DH_VIRTUALENV_INSTALL_ROOT=/opt
-
+# export DH_VIRTUALENV_INSTALL_ROOT=/opt
+export DH_VERBOSE=1
 export CFLAGS   := $(shell dpkg-buildflags --get CFLAGS)   $(shell dpkg-buildflags --get CPPFLAGS)
 export CXXFLAGS := $(shell dpkg-buildflags --get CXXFLAGS) $(shell dpkg-buildflags --get CPPFLAGS)
 export CPPFLAGS := $(shell dpkg-buildflags --get CXXFLAGS) $(shell dpkg-buildflags --get CPPFLAGS)
 export LDFLAGS  := $(shell dpkg-buildflags --get LDFLAGS) -Wl,--as-needed
 
+export PYBUILD_NAME=issmoexproxy
+# export PYBUILD_INSTALL_ARGS=--prefix=/opt
+# export PYBUILD_DESTDIR=debian/issmoexproxy/opt
 %:
-	dh $@ --with python-virtualenv
+	#dh $@ --with python-virtualenv
+	dh $@ --with python3 --buildsystem=pybuild
 
-override_dh_virtualenv:
-	dh_virtualenv --python /usr/bin/python3 --builtin-venv
+
+#override_dh_virtualenv:
+#	dh_virtualenv --python /usr/bin/python3 --builtin-venv
