--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority:extra
 Maintainer: destr <destrd@gmail.com>
 Build-Depends: debhelper (>= 9),
                python3,
+               python3-setuptools,
                dh-python,
                dh-exec
 Standards-Version:3.9.2
